ags (0.7.71)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore JACK from file

ags (0.7.70)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed most compiler warnings

ags (0.7.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes to API removed non-existing symbols and alike
	* added symbols file libags.sym, libags_audio.sym and libags_gui.sym

ags (0.7.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed stop all soundcard threads because only one was stopped

ags (0.7.68)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed close JACK client while ags_application_context_quit()
	* fixed configure.ac to check for atk-1.0 with AC_CHECK_LIB
	* fixed add/remove soundcards using AgsAudioPreferences
	* modified on file open failure to call ags_application_context_quit() instead of exit(-1) because JACK needs clean-up
	* improved configure.ac to give hint that ALSA and OSS is enabled
	* added --enable-oss argument to configure.ac

ags (0.7.67)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing soundcard info of ags-sf-line
	* updated ags_simple_file.dtd

ags (0.7.66)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed chrash while reading configuration with AgsSimpleFile
	* fixed persisting/restore of AgsSoundcard from configuration with AgsSimpleFile

ags (0.7.65)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented JACK audio output support
	* implemented configuration of multiple soundcard support
	* implemented AgsAudioSettings to configure your soundcards
	* implemented AgsConnectionEditor to assign your soundcards
	* implemented ags_jack_devout.c missing functions ags_jack_devout_list_cards() and ags_jack_devout_pcm_info()
	* implemented ags_jack_devout.c adjusting pcm channels
	* implemented ags_time_get_uptime_from_offset()
	* implemented AgsConnectionManager and AgsConnection