@@ -1,3 +1,14 @@
+ags (0.7.73)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed removed types of libags_gui.types of gtkdoc
+	* fixed return value to be void * of ags_stream_alloc()
+
+ags (0.7.72)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed configuration
+
 ags (0.7.71)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
